--- a/-myportfolio/package.json
+++ b/-myportfolio/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.2",
     "vue": "^3.3.4"
   },
